--- a/website/pages/profile.html
+++ b/website/pages/profile.html
@@ -32,6 +32,7 @@
   </section>
   <iframe id="google" src="https://www.google.com/calendar/embed?mode=WEEK&amp;height=400&amp;wkst=2&amp;hl=nl&amp;bgcolor=%23FFFFFF&amp;ctz=Europe%2FAmsterdam" style=" border-width:0 " width="500" height="400" frameborder="0" scrolling="no"></iframe>
   
+  <include src="blocks/form-add-group" />
   <include src="blocks/plusser-groups" />
 
 
@@ -61,6 +62,11 @@
     #plusser-groups{
       width:90%;
       overflow: auto;
+    }
+    #form-add-group{
+      width: 100%;
+      overflow: hidden;
+      height: 300px;
     }
   </style>
 </div>
