group content part fix

--- a/website/blocks/groups-content.html
+++ b/website/blocks/groups-content.html
@@ -79,7 +79,7 @@
   
   <style>
     .groups-search img{
-      width: 20%;
+      width: 10%;
     }
 
     .groups-search .search{
@@ -93,7 +93,7 @@
     .p-s-info{
       float:right;
     }
-    .groups-search .r-plusser img{
+    .groups-search .r-groups img{
       float:left;
       height: 65px;
       margin-right: 5px;
@@ -105,11 +105,14 @@
 
       width: 25%;
     }
-    .groups-search .r-plusser{
+    .groups-search .r-groups{
       border-bottom-style: solid;
       border-color: #70e4bE;
 
     }
+	.r-groups{
+	overflow:auto;
+	}
     .groups-search .detail h3{
       margin-top:0px;
     }
