CSS gefixt bij het zoeken van groepen
dit

--- a/website/blocks/groups-content.html
+++ b/website/blocks/groups-content.html
@@ -109,7 +109,7 @@
     .groups-search .r-groups{
       border-bottom-style: solid;
       border-color: #70e4bE;
-
+        clear: both;
     }
 	.r-groups{
 	overflow:auto;
