--- a/website/blocks/btn-join-to-group.html
+++ b/website/blocks/btn-join-to-group.html
@@ -9,18 +9,10 @@
   </div>
 
   <script>
-
-//    $('.pop-groups-select').hide();
-
-  //  $.get(SERVER+"/plussers/"+PARAMS.id+"/firstName",function(data){
-   //   $(".p-name").html(data);
-   // });
-
-
     $(".btn-join").on("click",function(){
-          $.post(SERVER+"/groups/"+$(target.currentTarget).attr("id"),{"plussers":PARAMS.id})
+          $.post(SERVER+"/groups/"+$(PARAMS).attr("id"),{"plussers":PLUSSERS})
             .done(function(res){
-
+			navToPage(groups,PARAMS.id);
             }).fail(function(res){
 
             });
