--- a/website/pages/faq.html
+++ b/website/pages/faq.html
@@ -1,5 +1,21 @@
 <div id="faq" class="container page">
-  <h2>FAQ PAGE</h2>
-  <p>Sup wouter</p>
-
+    <h2>Vragen</h2>
+    <ul>
+        <strong><li>Vanaf welke leeftijd kan ik gebruikmaken van de applicatie?</li></strong>
+        <li>Vanaf ongeveer uw 55e leeftijd kunt u zich op deze applicatie aanmelden als plusser.</li>
+        <strong><li>Is het mogelijk om deze applicatie te gebruiken terwijl ik vroeger niet werkte?</li></strong>
+        <li>Dat is mogelijk, deze applicatie controleert niet of u vroeger gewerkt heeft, het biedt slechts de mogelijkheid voor u om op uw oude dag nog lekker aan het werk te kunnen.</li>
+        <strong><li>Kan ik van deze applicatie gebruikmaken voor mijn pensioen?</li></strong>
+        <li>Dat is mogelijk, deze applicatie biedt slechts een extra mogelijkheid in de markt.</li>
+        <strong><li>Waar is deze applicatie voor bedoeld?</li></strong>
+        <li>Deze applicatie biedt de oudere generatie een kans weer aan het werk te gaan op zowel professioneel als hobby-niveau.</li>
+        <strong><li>Wat kan ik met deze applicatie?</li></strong>
+        <li>U kunt zich aanmelden als plusser, en daarna allerlei klusjes of deeltijdwerk aanbieden aan andere plussers. Het is tevens mogelijk om u aan te melden voor bepaalde beschikbare deeltijdbanen die andere plussers aanbieden. Daarnaast kunt u een groep(en) aanmaken of u bij een of meerdere groepen toevoegen. Deze groep(en) hebben dezelfde interesses en vaardigheden beschikbaar, en de leden werken samen aan bepaalde projecten of klussen.</li>
+        <strong><li>Waar staat Oompaa voor?</li></strong>
+        <li>Oma en opa.</li>
+        <strong><li>Hoe kan ik erachter komen welke groep(en) geschikt zijn voor mij?</li></strong>
+        <li>U kunt elke groep openen voor meer informatie voer die desbetreffende groep, zo kunt u zien welke groepen het beste bij u passen.</li>
+        <strong><li>Hoe kan ik personen met overeenkomende interesses en vaardigheden vinden?</li></strong>
+        <li>Bij het tabblad Plussers is er een invoerveld aanwezig. Hierin kunt u trefwoorden invoeren, en op ‘zoeken’ klikken. De resultaten zullen daarna getoond worden.</li>
+    </ul>
 </div>
