--- a/website/pages/faq.html
+++ b/website/pages/faq.html
@@ -1,3 +1,9 @@
+<style>
+    ul li a{
+        list-style: none;
+    }
+</style>
+
 <div id="faq" class="container page">
     <h2>Vragen</h2>
     <ul>
