--- a/website/blocks/home-info.html
+++ b/website/blocks/home-info.html
@@ -1,6 +1,6 @@
 <div id="home-info" class="block">
   <h1> OOMPAA  </h1>
-  <p>Welkom op de website van OOMPAA. Een platform die de oudere generatie helpt hun krachten te bundellen.</p>
+  <p>Welkom op de website van OOMPAA. Een platform die de oudere generatie helpt hun krachten te bundelen.</p>
 
   <style>
 
