--- a/website/blocks/home-login.html
+++ b/website/blocks/home-login.html
@@ -3,7 +3,7 @@
   <div class="label"> Voornaam</div> <input class="login-firstName" placeholder="voornaam"> </input> </br>
   <div class="label"> Achternaam</div> <input class="login-lastname" placeholder="achternaam"> </input> </br>
   <div class="label"> Wachtwoord</div> <input class="login-password" type="password" placeholder="wachtwoord"> </input> </br>
-  <button id ="btn-login"> Login </button>
+  <button id ="btn-login"> Inloggen </button>
   <p class="feedback"> </p>
 
   <style>
