--- a/website/blocks/home-register.html
+++ b/website/blocks/home-register.html
@@ -2,9 +2,9 @@
   <div>
     <h3>Registreren</h3>
     <div class="form">
-      <div class="label"> Voornaam </div> <input class="firstName"></input> </br>
-      <div class="label"> Achternaam </div>  <input class="lastName"></input> </br>
-      <button class="btn-reg">Register</button>
+      <div class="label"> Voornaam </div> <input class="firstName" /> </br>
+      <div class="label"> Achternaam </div>  <input class="lastName" /> </br>
+      <button class="btn-reg">Registreer</button>
     </div>
   </div>
 
