--- a/website/pages/group-detail.html
+++ b/website/pages/group-detail.html
@@ -2,7 +2,7 @@
   
  <div id="btn-cont" />
   <include src="blocks/group-detail-info" />
-  
+  <include src="blocks/group-detail-leden" />
    <include src="blocks/group-detail-bezigheden" />
     <include src="blocks/group-agenda" />
   <script>
