--- a/website/blocks/group-detail-info.html
+++ b/website/blocks/group-detail-info.html
@@ -15,7 +15,7 @@
                 <td class="description"></td>
             </tr>
             <tr>
-                <td>eigenaren:</td>
+                <td>Eigenaren:</td>
                 <td class="owners"></td>
             </tr>
             <tr>
@@ -27,7 +27,7 @@
                 <td class="leden"></td>
             </tr>
 			<tr>
-                <td>images:</td>
+                <td>Foto's:</td>
                 <td class="images"></td>
             </tr>           
         </table>
