--- a/website/blocks/group-detail-leden.html
+++ b/website/blocks/group-detail-leden.html
@@ -1,7 +1,7 @@
 <div id="groepsleden">
   <h3>Groepsleden</h3>
 
-  <div class="leden">
+  <div class="groepslid">
 
   </div>
 
@@ -23,7 +23,7 @@
                 "<h4>"+data.firstName+"</h4>"+
                 "<p>"+data.lastName+"</p>"+
               "</div>";
-            $(".leden").append(participants);
+            $(".groepslid").append(participants);
           });
         }
 
@@ -36,14 +36,14 @@
 
   <style>
     .group img{
-        
+
       width:200px;
     }   
     .group{
       float:left;
       width:200px;
-      height: 400px;
-
+      height: 250px;
+        text-align: center;
       border-style: none solid solid solid;
       border-color:#60D4AE;
       margin: 2px;
