wat spellingsfouten eruit gehaald

--- a/website/blocks/home-info-big.html
+++ b/website/blocks/home-info-big.html
@@ -1,17 +1,13 @@
 <div id="home-info-big" class="block">
   <div>
-    <h3>Wat is Oompaa?</h3>
+    <h3>Wat is OOMPAA?</h3>
     <p> 
       OOOMPAA is een website gemaakt voor de oudere generatie van Nederland, oftewel de plussers. </br>
       Bij OOMPAA zorgen wij ervoor dat kennis opgebouwd over meerdere decenia's niet verloren gaat. Wij bieden de oude generatie een kans weer aan de slag te gaan op zowel professioneel als hobbyniveau.
     </p>
-    <h3>Hoe werkt OOMPAA</h3>
+    <h3>Hoe werkt OOMPAA?</h3>
     <p>
-      Binnen de website zult u de mogelijkheid hebben om samen met gelijkgestemden aan de slag te gaan. Op het moment dat u zich geregistreerd heeft, kunt u via de website berichten sturen naar mede plussers en naar de groepen die zij gevormd hebben.
+      Binnen de website zult u de mogelijkheid hebben samen met gelijkgestemden aan de slag te gaan. Op het moment dat u zich geregistreerd heeft, kunt u via de website berichten sturen naar medeplussers en naar de groepen die zij gevormd hebben.
     </p>
   </div>
-
-  <style>
-
-  </style>
 </div>
