--- a/website/blocks/home-login.html
+++ b/website/blocks/home-login.html
@@ -1,5 +1,5 @@
 <div id="home-login" class="block">
-  <h3> Login  </h3>
+  <h3> Inloggen  </h3>
   <div class="label"> Voornaam</div> <input class="login-firstName" placeholder="voornaam"> </input> </br>
   <div class="label"> Achternaam</div> <input class="login-lastname" placeholder="achternaam"> </input> </br>
   <div class="label"> Wachtwoord</div> <input class="login-password" type="password" placeholder="wachtwoord"> </input> </br>
