zzzzz i r grammar nazi

--- a/website/blocks/home-info-big.html
+++ b/website/blocks/home-info-big.html
@@ -2,7 +2,7 @@
   <div>
     <h3>Wat is OOMPAA?</h3>
     <p> 
-      OOOMPAA is een website gemaakt voor de oudere generatie van Nederland, oftewel de plussers. </br>
+      OOMPAA is een website gemaakt voor de oudere generatie van Nederland, oftewel de plussers. </br>
       Bij OOMPAA zorgen wij ervoor dat kennis opgebouwd over meerdere decenia's niet verloren gaat. Wij bieden de oude generatie een kans weer aan de slag te gaan op zowel professioneel als hobbyniveau.
     </p>
     <h3>Hoe werkt OOMPAA?</h3>
