Removed name: from groups

--- a/website/blocks/groups-aanbevolen.html
+++ b/website/blocks/groups-aanbevolen.html
@@ -18,7 +18,7 @@
             html2 += (
               "<div class='r-group' id='"+group.id+"'>"+
                 "<img src='"+group.image+"'>"+
-               "<p>Naam: "+group.name+"</p>"+
+               "<p>"+group.name+"</p>"+
 			  "<p>"+group.description.substring(0,50)+" ... </p>"+
               "</div>"
             );
