--- a/website/blocks/groups-content.html
+++ b/website/blocks/groups-content.html
@@ -29,7 +29,7 @@
             html2 += (
               "<div id='"+groups.id+"'class='r-groups'>"+
                 "<img height='150' width ='150'  src='"+groups.image+"'>"+
-				"<p>Naam: "+groups.name+"</p>"+
+				"<p>"+groups.name+"</p>"+
 				
               "</div>"
             );
