Small bug fixes

--- a/website/blocks/groups-content.html
+++ b/website/blocks/groups-content.html
@@ -29,7 +29,8 @@
             html2 += (
               "<div id='"+groups.id+"'class='r-groups'>"+
                 "<img height='150' width ='150'  src='"+groups.image+"'>"+
-				"<p>"+groups.name+"</p>"+
+				        "<p>"+groups.name+" - "+groups.location+"</p>"+
+                "<p>"+groups.motivation+"</p>"+
 				
               "</div>"
             );
