--- a/website/blocks/group-detail-info.html
+++ b/website/blocks/group-detail-info.html
@@ -68,16 +68,17 @@
 			var countimages=0;
 			while (group.images[countimages])
 			{
-			$(".detail-info .images").append("<img height='200px' width= '200px' src="+group.images[countimages]+"/>");
-			countimages++;
-			console.log("ik loop ", countimages ," images heen");
+			 $(".detail-info .images").append("<img height='200px' width= '200px' src='"+group.images[countimages]+"'' />");
+			 countimages++;
+			 console.log("ik loop ", countimages ," images heen");
 			}
 			var countowners=0;
-			while (group.owners[countowners])
+			
+      while (group.owners[countowners])
 			{
-			$(".detail-info .owners").append(group.owners[countowners])
-			countowners++
-			console.log("ik loop door countowners");
+			 $(".detail-info .owners").append(group.owners[countowners])
+			 countowners++
+			 console.log("ik loop door countowners");
 			}
 			
           $("groups").hide();
