Opzet delete in demo

--- a/demo/pages/all.html
+++ b/demo/pages/all.html
@@ -7,6 +7,7 @@
     include("blocks/add-plusser-to-group",".container");
     include("blocks/add-interest-to-plusser",".container");
     include("blocks/custom-get",".container");
+    include("blocks/remove-plusser",".container");
 
     var container = $(".container")
     container.masonry( {
